...
    "hub_filter_all" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "All"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Todas"
...
    "socks_retry" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Retry"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reintentar"
...
    "wallet_result_done" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hecho"
...
    "wallet_send" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Send"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enviar"
...
